--- a/README
+++ b/README
@@ -1,11 +1,14 @@
-Project: emacs.d
+#-*- mode: org -*-
+########################################
+# Project: emacs.d
+########################################
 
 This is my personal emacs configuration and script collection. 
 
 content:
 
-init.el		-	The base configuration file. This is the alternative configuration to ~/.emacs.
-auto-save-list	-	Emacs managed directory for autosaved session informations.
-
+| init.el        | The base configuration file. This is the alternative configuration to ~/.emacs. |
+| auto-save-list | Emacs managed directory for autosaved session informations.                     |
+| tramp          | auto-generated, connection history from tramp                           |
 
 .. more to come.
